...
          href: user?.isBarber ? "/business" : null,
        }}
      />
      <Tabs.Screen
        name="appointments"
        options={{
          title: "Agendamentos",
          tabBarIcon: ({ color }) => (
            <FontAwesome size={28} name="calendar" color={color} />
          ),
          tabBarBadge: pendingCounts.barber || undefined,
          tabBarBadgeStyle: pendingBadgeStyle,
          href: user?.isBarber ? "/appointments" : null,
...
        }}
      />

      <Tabs.Screen
        name="auth"
        options={{
          title: "Entrar / Cadastrar",
          tabBarIcon: ({ color }) => (
            <FontAwesome size={28} name="user" color={color} />
          ),
          href: !user ? "/auth" : null,
        }}
      />
...
