appId: com.barberclick.app
env:
  EMAIL: gabrielfernandes2005@gmail.com
  SENHA: "123456"
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Entrar / Cadastrar.*"
    timeout: 60000
- tapOn: "Entrar / Cadastrar.*"
- assertVisible: "Fazer Login"
- tapOn: "E-mail"
- inputText: ${EMAIL}
- tapOn: "Senha"
- inputText: ${SENHA}
- pressKey: Enter
- tapOn: "Entrar"
- tapOn:
    text: "Agora não"
    optional: true
- tapOn: "Agendamentos.*"
- scrollUntilVisible:
    element:
      text: "Cancelar agendamento"
    direction: DOWN
    centerElement: true
    timeout: 20000
- tapOn: "Cancelar agendamento"
- extendedWaitUntil:
    visible: "Voltar"
    timeout: 10000
- tapOn:
    text: "Cancelar agendamento"
    index: 1
- waitForAnimationToEnd:
    timeout: 5000
